demos: Silence -Wmaybe-uninitialized

Fall out from 0e42b9d0e64aaf9f4d04eeab29d860a68209ff61

https://bugzilla.gnome.org/show_bug.cgi?id=750335